--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,19 +23,21 @@ h1{
   font-size: 2rem;
   margin-top: 50px;
   color: #424642;
+  font-family: monospace;
 }
 h2{
   font-size:1.5rem;
   color: #424642;
   font-weight: normal;
   padding-bottom: 10px;
+  font-family: monospace;
 
 }
 body{
   color: #536162;
   margin:0px;
   text-align: center;
-  font-family: monospace;
+  font-family: sans-serif;
 
 }
 p{
