--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,7 +30,7 @@ h2{
   color: #424642;
   font-weight: normal;
   padding-bottom: 10px;
-  font-family: monospace;
+  font-family: sans-serif;
 
 }
 body{
