--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,7 @@ h1{
   font-size: 2rem;
   margin-top: 50px;
   color: #424642;
-  font-family: monospace;
+  font-family: sans-serif;
 }
 h2{
   font-size:1.5rem;
