--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 
 .top-container{
   position: relative;
-    background-color: #F3F4ED;
+    background-color: #F3EFE0;
   padding-top: 100px;
   height: 610px;
 }
@@ -27,23 +27,25 @@
 h1{
   font-size: 2rem;
   margin-top: 50px;
-  color: #424642;
+  color: #434242;
   font-family: monospace;
+
 }
 h2{
   font-size:1.5rem;
-  color: #424642;
+  color: #434242;
   font-weight: normal;
   padding-bottom: 10px;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   line-height: 2;
 
 }
 body{
-  color: #536162;
+  color: #434242;
   margin:0px;
   text-align: center;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
 
 }
 p{
@@ -56,7 +58,7 @@ hr{
   margin: 100px auto;
 }
 a{
-  color: #536162;
+  color: #434242;
   margin: 10px 20px;
   text-decoration: none;
 }
@@ -119,6 +121,9 @@ a:hover{
 }
 .footer-link{
   color: #F3F4ED;
+}
+.footer-link:hover{
+  color: grey;
 }
 
 .myStoryBTN {
