--- a/CSS/style_my_story.css
+++ b/CSS/style_my_story.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #F3F4ED;
+  background-color: #F3EFE0;
   margin:0px;
   font-family: sans-serif;
 }
@@ -17,12 +17,15 @@ body{
 .footer-link{
   color: #F3F4ED;
 }
+.footer-link:hover{
+  color: grey;
+}
 
 h1{
   text-align: center;
   font-size: 2rem;
   margin-top: 200px;
-  color: #424642;
+  color: #434242;
   font-family: sans-serif;
   margin: 200px auto 100px auto;
 }
@@ -30,5 +33,6 @@ h1{
 p{
   width: 60%;
   line-height: 2;
+  font-weight: 300;
   margin: 20px auto 20px auto;
 }
