--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 
 .top-container{
   position: relative;
-    background-color: #F3EFE0;
+  background-color: #F3EFE0;
   padding-top: 100px;
   height: 610px;
 }
@@ -180,4 +180,63 @@ a:hover{
   line-height: 2;
   font-weight: 300;
   margin: 20px auto 20px auto;
+}
+
+/*Translated page*/
+.book{
+  padding-top:100px;
+}
+.TTM-E{
+    height: 200px;
+    margin-right: 150px;
+}
+.TTM-C{
+  height: 200px;
+}
+
+.arrow1{
+  position: relative;
+  bottom: 60px;
+  right: 70px;
+  width: 50px;
+}
+
+.TAW-E{
+  position: relative;
+  height: 200px;
+  margin-right: 150px;
+  left: 30px;
+}
+.TAW-C{
+  height: 200px;
+}
+
+.arrow2{
+  position: relative;
+  bottom: 60px;
+  right: 40px;
+  width: 50px;
+}
+
+.TGA-E{
+  position: relative;
+  height: 200px;
+  margin-right: 150px;
+
+}
+.TGA-C{
+  height: 200px;
+}
+
+.arrow3{
+  position: relative;
+  bottom: 60px;
+  right: 70px;
+  width: 50px;
+}
+
+
+
+.translated-body{
+  background-color: #F3EFE0;
 }
