--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,7 @@
 .bottom-container{
   position: relative;
   background-color: #434242;
-  padding: 50px 0 20px;
+  padding: 20px 0 10px 0;
   color: grey;
 }
 .subtitle{
@@ -128,6 +128,9 @@ a:hover{
 }
 .footer-link:hover{
   color: grey;
+}
+.footer{
+  color: #F3F4ED;
 }
 
 .my-story-BTN {
