--- a/CSS/style.css
+++ b/CSS/style.css
@@ -125,6 +125,8 @@ a:hover{
 }
 .footer-link{
   color: #F3F4ED;
+  display: block;
+  margin-bottom: 30px;
 }
 .footer-link:hover{
   color: grey;
@@ -187,7 +189,7 @@ a:hover{
 /*My Story Page*/
 
 .my-story-body{
-  background-color: #F3EFE0;
+  background-color: #FDFAF6;
   margin:0px;
   font-family: sans-serif;
 }
@@ -195,12 +197,14 @@ a:hover{
 .my-story-h1{
   text-align: center;
   font-size: 2rem;
-  margin-top: 200px;
   color: #434242;
   font-family: sans-serif;
-  margin: 200px auto 100px auto;
+  margin: 50px auto 100px auto;
 }
-
+.story-container{
+  padding-top:100px;
+  padding-bottom:100px;
+}
 .story{
   text-align: left;
   width: 60%;
